bppackaging/src/objects/Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CalcTax_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalcTax_Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalcTax_LineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalcTax_LineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Id__c</fullName>
        <label>Country Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Fee__c</fullName>
        <label>Default Tax on Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Labor__c</fullName>
        <label>Default Tax on Labor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Part__c</fullName>
        <label>Default Tax on Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Unit__c</fullName>
        <label>Default Tax on Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Vendor_Product__c</fullName>
        <label>Default Tax on Vendor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberOfCustomersRecordPageSize__c</fullName>
        <label>NumberOfCustomersRecordPageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SearchMinCharLength__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Minimum characters length to initiate search for Filters and Autocomplete</description>
        <inlineHelpText>Minimum characters length to initiate search for Filters and Autocomplete</inlineHelpText>
        <label>SearchMinCharLength</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_From_Email_Id__c</fullName>
        <label>Sent From Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Id__c</fullName>
        <label>State Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Included_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Included Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configurations</label>
</CustomObject>